--- a/stack/Pulumi.thousand-genomes.yaml
+++ b/stack/Pulumi.thousand-genomes.yaml
@@ -5,6 +5,6 @@ config:
   datasets:hail_service_account_test: thousand-genomes-test-508@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_standard: thousand-genomes-standard-832@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_full: thousand-genomes-full-579@hail-295901.iam.gserviceaccount.com
-  gcp:billing_project: autonomous-tube-321822
-  gcp:project: autonomous-tube-321822
+  gcp:billing_project: thousand-genomes
+  gcp:project: thousand-genomes
   gcp:user_project_override: "true"
